# site

./: LICENSE  index.html
docs/: CNAME
games/MasterBall.JavaScript/: index.html
games/minesweeper-tauri/: .gitignore  README.md
games/minesweeper-tauri/src-tauri/: Cargo.toml  tauri.conf.json
games/minesweeper-tauri/src-tauri/icons/: icon.icns
games/minesweeper-tauri/src-tauri/src/: main.rs
games/minesweeper-tauri/src-tauri/src/menus/: menu.rs
games/minesweeper-tauri/ui/: custom.html  index.html  rank.html
games/minesweeper-tauri/ui/css/: custom.css  index.css  rank.css
games/minesweeper-tauri/ui/js/: event.js  index.js  rank.js  utils.js
games/sokoworld/: licenses.html  licenses.md
